--- a/#source/calendar-style.scss
+++ b/#source/calendar-style.scss
@@ -423,42 +423,13 @@
 }
 
 //Кнопка
-.button {
-   width: 13rem;
-   height: 40px;
-   padding: 5px;
-   background-color: $wave-2;
-   text-align: center;
-   border: 1px solid $border;
-   position: relative;
-   display: flex;
-   justify-content: center;
-}
-.button span {
-   display: block;
-   width: 10px;
-   height:10px;
-   opacity: 1;
-
-}
-.button::after {
+.buttons__home {
+   &::after {
    position:absolute;
    content:'Нарядить елку';
-   top:2px;
-   left:24px;
+   top:5px;
+   left:36px;
    font-size: 18px;
-   font-style: italic;
    opacity: 0;
-}
-.button:hover {
-   background-color: $color-3;
-   transition: 300ms ease-in-out;
-}
-.button:hover::after {
-   opacity:1;
-   transition: 300ms ease-in-out;
-}
-.button:hover span {
-   opacity:0;
-   transition: 300ms ease-in-out;
+   }
 }
