--- a/css/index-style.css
+++ b/css/index-style.css
@@ -9,10 +9,8 @@
 }
 
 html, body {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  font-style: "Cormorant Upright";
+  width: 100%;
+  font-family: "Cormorant Upright";
   font-weight: 400;
   line-height: 150%;
   font-size: 16px;
@@ -51,17 +49,6 @@ nav, footer, header {
   height: 90px;
   width: 100%;
   background-color: #25330F;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 40px;
-  margin: 0;
 }
 .page__content {
   min-height: 100vh;
@@ -77,9 +64,85 @@ nav, footer, header {
   position: relative;
 }
 
-.page {
+.navigation__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  gap: 70px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 20px 40px;
+  margin: 0;
+}
+
+.buttons__home {
+  width: 13rem;
+  height: 40px;
+  padding: 5px;
+  background-color: #DCDCDC;
+  text-align: center;
+  border: 1px solid rgba(75, 40, 10, 0.8);
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.buttons__home span {
+  display: block;
+  width: 10px;
+  height: 10px;
+  opacity: 1;
+}
+.buttons__home:hover {
+  background-color: rgb(243, 218, 11);
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
+}
+.buttons__home:hover::after {
+  opacity: 1;
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
+}
+.buttons__home:hover span {
+  opacity: 0;
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
+}
+
+.buttons__social {
+  color: #DCDCDC;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  padding: 15px;
+  font-size: 32px;
+}
+.buttons__social:hover {
+  color: rgb(243, 218, 11);
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
+}
+
+.content {
+  background-color: #D4C9B4;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0.9em, rgba(255, 255, 255, 0)), color-stop(1em, rgba(0, 0, 0, 0.15))) 0 0, -webkit-gradient(linear, left top, right top, color-stop(0.9em, rgba(255, 255, 255, 0)), color-stop(1em, rgba(0, 0, 0, 0.15))) 0 0;
   background: linear-gradient(rgba(255, 255, 255, 0) 0.9em, rgba(0, 0, 0, 0.15) 1em) 0 0, linear-gradient(90deg, rgba(255, 255, 255, 0) 0.9em, rgba(0, 0, 0, 0.15) 1em) 0 0;
   background-size: 1em 1em;
   background-color: #D4C9B4;
+}
+
+.buttons__home::after {
+  position: absolute;
+  content: "Адвент-календарь";
+  top: 5px;
+  left: 36px;
+  font-size: 18px;
+  opacity: 0;
 }
