--- a/#source/index-style.scss
+++ b/#source/index-style.scss
@@ -35,7 +35,40 @@
     height: 100vh
   }
 }
-
+@keyframes jump {
+  0% {
+    transform: translateY(0%);
+  }
+  20% {
+    transform: translateY(400px);
+  }
+  40% {
+    transform: translateY(300px);
+  }
+  60% {
+    transform: translateY(400px);
+  }
+  80% {
+    transform: translateY(200px);
+  }
+  100% {
+    transform: translateY(400px) rotate(360deg);
+    opacity:0;
+  }
+}
+@keyframes gift-jump {
+  0% {
+    opacity:0;
+    transform: translateY(200px);
+  }
+  20% {
+    opacity: 1;
+  }
+  100% {
+    opacity:1;
+    transform: translateY(400px);
+  }
+}
 .content {
   height: 100%;
   width:100%;
@@ -60,7 +93,30 @@
   font-size: 18px;
   opacity: 0;
   }
-}
+  right: 60px;
+  transform: translateY(0px);
+  animation: jump 3s 2s ease-in-out forwards;
+
+  }
+  .gift {
+    width: 50px;
+    height: 50px;
+    font-size: 100px;
+    padding: 5px;
+    position: relative;
+    opacity:0;
+   left: 1100px;
+    transform: translateY(200px) rotate(360deg);
+    animation: gift-jump 1s 4s ease-in-out forwards;
+  z-index:500;
+  }
+  .gift span {
+    display: block;
+    font-size:100px;
+  }
+  .gift__link:hover {
+    transform: scale(3) rotate(360deg);
+  }
 
 .animation {
   position:relative;
