--- a/#source/index-style.scss
+++ b/#source/index-style.scss
@@ -69,6 +69,17 @@
     transform: translateY(400px);
   }
 }
+@keyframes isVisible {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity:0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 .content {
   height: 100%;
   width:100%;
@@ -95,7 +106,7 @@
   }
   right: 60px;
   transform: translateY(0px);
-  animation: jump 3s 2s ease-in-out forwards;
+  animation: jump 3s 6s ease-in-out forwards;
 
   }
   .gift {
@@ -107,8 +118,20 @@
     opacity:0;
    left: 1100px;
     transform: translateY(200px) rotate(360deg);
-    animation: gift-jump 1s 4s ease-in-out forwards;
+    animation: gift-jump 1s 8s ease-in-out forwards;
   z-index:500;
+
+  &::before {
+    position: absolute;
+    content: 'Кликни сюда:)';
+    font-size:18px;
+    top: 50;
+    left: -50px;
+    width: 20px;
+    height: 2px;
+    opacity: 0;
+    animation: isVisible 2s 1s ease-in-out;
+  }
   }
   .gift span {
     display: block;
