--- a/css/index-style.css
+++ b/css/index-style.css
@@ -477,17 +477,178 @@ nav, footer, header {
 .slide-9 {
   -webkit-transform: translateY(-250%);
           transform: translateY(-250%);
-  top: -20px;
+  top: 80px;
   left: 100px;
   opacity: 1;
-  -webkit-animation: toBottom 2s 3s ease-in-out;
-          animation: toBottom 2s 3s ease-in-out;
+  -webkit-animation: toBottom 3s 3s ease-in-out;
+          animation: toBottom 3s 3s ease-in-out;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
-  z-index: 2;
+  z-index: 1000;
+  width: 80%;
+  height: 40px;
 }
 
-.slide-9 img {
-  width: 900px;
-  height: 140px;
+.lightrope {
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  padding: 0;
+  pointer-events: none;
+  width: 100%;
+  z-index: 1000;
+}
+
+.lightrope li {
+  position: relative;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: block;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  margin: 20px;
+  display: inline-block;
+  background: #00f7a5;
+  -webkit-box-shadow: 0px 4.66667px 24px 3px #00f7a5;
+          box-shadow: 0px 4.66667px 24px 3px #00f7a5;
+  -webkit-animation: flash-1 2s infinite;
+          animation: flash-1 2s infinite;
+}
+
+.lightrope li:nth-child(2n+1) {
+  background: cyan;
+  -webkit-box-shadow: 0px 4.66667px 24px 3px rgba(0, 255, 255, 0.5);
+          box-shadow: 0px 4.66667px 24px 3px rgba(0, 255, 255, 0.5);
+  -webkit-animation: flash-2 0.4s infinite;
+          animation: flash-2 0.4s infinite;
+}
+
+.lightrope li:nth-child(4n+2) {
+  background: #f70094;
+  -webkit-box-shadow: 0px 4.66667px 24px 3px #f70094;
+          box-shadow: 0px 4.66667px 24px 3px #f70094;
+  -webkit-animation: flash-3 1.1s infinite;
+          animation: flash-3 1.1s infinite;
+}
+
+.lightrope li:nth-child(odd) {
+  -webkit-animation-duration: 1.8s;
+          animation-duration: 1.8s;
+}
+
+.lightrope li:nth-child(3n+1) {
+  -webkit-animation-duration: 1.4s;
+  animation-duration: 1.4s;
+}
+
+.lightrope li:before {
+  content: "";
+  position: absolute;
+  background: #222;
+  width: 10px;
+  height: 9.33333px;
+  border-radius: 3px;
+  top: -7px;
+  left: 7px;
+}
+
+.lightrope li:after {
+  content: "";
+  top: -15px;
+  left: 19px;
+  position: absolute;
+  width: 52px;
+  height: 16px;
+  border-bottom: solid #222 2px;
+  border-radius: 50%;
+}
+
+.lightrope li:last-child:after {
+  content: none;
+}
+
+.lightrope li:first-child {
+  margin-left: -40px;
+}
+
+@-webkit-keyframes flash-1 {
+  0%, 100% {
+    background: #00f7a5;
+    -webkit-box-shadow: 0px 4.66667px 24px 3px #00f7a5;
+            box-shadow: 0px 4.66667px 24px 3px #00f7a5;
+  }
+  50% {
+    background: rgba(0, 247, 165, 0.4);
+    -webkit-box-shadow: 0px 4.66667px 24px 3px rgba(0, 247, 165, 0.2);
+            box-shadow: 0px 4.66667px 24px 3px rgba(0, 247, 165, 0.2);
+  }
+}
+
+@keyframes flash-1 {
+  0%, 100% {
+    background: #00f7a5;
+    -webkit-box-shadow: 0px 4.66667px 24px 3px #00f7a5;
+            box-shadow: 0px 4.66667px 24px 3px #00f7a5;
+  }
+  50% {
+    background: rgba(0, 247, 165, 0.4);
+    -webkit-box-shadow: 0px 4.66667px 24px 3px rgba(0, 247, 165, 0.2);
+            box-shadow: 0px 4.66667px 24px 3px rgba(0, 247, 165, 0.2);
+  }
+}
+@-webkit-keyframes flash-2 {
+  0%, 100% {
+    background: cyan;
+    -webkit-box-shadow: 0px 4.66667px 24px 3px cyan;
+            box-shadow: 0px 4.66667px 24px 3px cyan;
+  }
+  50% {
+    background: rgba(0, 255, 255, 0.4);
+    -webkit-box-shadow: 0px 4.66667px 24px 3px rgba(0, 255, 255, 0.2);
+            box-shadow: 0px 4.66667px 24px 3px rgba(0, 255, 255, 0.2);
+  }
+}
+@keyframes flash-2 {
+  0%, 100% {
+    background: cyan;
+    -webkit-box-shadow: 0px 4.66667px 24px 3px cyan;
+            box-shadow: 0px 4.66667px 24px 3px cyan;
+  }
+  50% {
+    background: rgba(0, 255, 255, 0.4);
+    -webkit-box-shadow: 0px 4.66667px 24px 3px rgba(0, 255, 255, 0.2);
+            box-shadow: 0px 4.66667px 24px 3px rgba(0, 255, 255, 0.2);
+  }
+}
+@-webkit-keyframes flash-3 {
+  0%, 100% {
+    background: #c5062f;
+    -webkit-box-shadow: 0px 4.66667px 24px 3px rgb(211, 4, 73), 0, 33;
+            box-shadow: 0px 4.66667px 24px 3px rgb(211, 4, 73), 0, 33;
+  }
+  50% {
+    background: rgba(247, 0, 148, 0.4);
+    -webkit-box-shadow: 0px 4.66667px 24px 3px rgba(247, 0, 148, 0.2);
+            box-shadow: 0px 4.66667px 24px 3px rgba(247, 0, 148, 0.2);
+  }
+}
+@keyframes flash-3 {
+  0%, 100% {
+    background: #c5062f;
+    -webkit-box-shadow: 0px 4.66667px 24px 3px rgb(211, 4, 73), 0, 33;
+            box-shadow: 0px 4.66667px 24px 3px rgb(211, 4, 73), 0, 33;
+  }
+  50% {
+    background: rgba(247, 0, 148, 0.4);
+    -webkit-box-shadow: 0px 4.66667px 24px 3px rgba(247, 0, 148, 0.2);
+            box-shadow: 0px 4.66667px 24px 3px rgba(247, 0, 148, 0.2);
+  }
 }
